ansible/playbooks/base-components/05_sentry_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sentry-ingress
  namespace: sentry
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    certmanager.k8s.io/issuer: "letsencrypt"
    certmanager.k8s.io/acme-challenge-type: dns01
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - sentry.kumpel.cloud
      secretName: sentry-tls
  rules:
    - host: sentry.kumpel.cloud
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: sentry-relay
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sentry-web
                port:
                  number: 9000
